# oci-mon-mcp-server

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/: metric_registry.yaml  seed_query_templates.json  seed_user_memory.json
docs/: CLIENT_SETUP.md  LEARNING_TEMPLATE_STRATEGY.md  PRIORITIZED_BACKLOG.md  PRODUCT_TECH_NOTES.md  PROTOTYPE_PRD.md  QUICKSTART.md  TECHNICAL_REQUIREMENTS.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-03-23-namespace-agnostic-engine-and-audit-logging.md
scripts/: aggregate_learnings.py  manage_users.py  migrate_to_multi_user.py  promote_seeds.py  sanitize_utils.py
src/oci_mon_mcp/: __init__.py  artifacts.py  assistant.py  audit.py  errors.py  execution.py  identity.py  metric_registry.py  models.py  oci_sdk_adapter.py  oci_support.py  repository.py  server.py
tests/: test_assistant.py  test_audit.py  test_metric_registry.py  test_multi_user.py  test_oci_sdk_adapter.py  test_server.py
